update: auth complete
